2017-10-20  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/GdbServerImpl.cpp (GdbServerImpl::rspSyscallReply): Don't
	compare unsigned variable with signed immediate.

2017-10-20  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/RspPacket.cpp (RspPacket::packStr): Change type of some
	locals.
	(RspPacket::packHexstr): Likewise.
	(RspPacket::packRcmdStr): Likewise.
	* server/RspPacket.h (bufSize): Change type.
	(len): Likewise.
	* server/GdbServerImpl.cpp (GdbServerImpl::rspWriteAllRegs):
	Change type of some locals.
	(GdbServerImpl::rspWriteReg): Likewise.
	(GdbServerImpl::rspWriteMemBin): Likewise, also update sscanf
	format to match.
	(GdbServerImpl::rspWriteMemBin): Change type of some locals.
	(GdbServerImpl::rspRemoveMatchpoint): Likewise.
	(GdbServerImpl::rspInsertMatchpoint): Likewise.

2017-10-20  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/main.cpp (main): Remove 'flags' and 'silent', unused
	variables.
	* server/GdbServerImpl.cpp (GdbServerImpl::rspClientRequest):
	Remove 'timeout_start', unused variable.

2017-10-20  Andrew Burgess  <andrew.burgess@embecosm.com>

	* configure.ac: Add new options to enable or disable Wall, Wextra,
	and Werror compiler flags.
	* configure: Regenerate.

2017-10-19  Andrew Burgess  <andrew.burgess@embecosm.com>

	* configure.ac: Provide a default value for the top module name of
	the ri5cy model.
	* configure: Regenerate.

2017-09-26  Andrew Burgess  <andrew.burgess@embecosm.com>

	* Makefile.in: Regenerate.
	* configure:  Regenerate.
	* configure.ac: Add support for new --with-gdbsim-modeldir
	configure option.  Add gdbsim target makefile to list of makefiles
	to generate.
	* server/Makefile.am: Add suport for linking gdbsim in.
	* server/Makefile.in: Regenerate.
	* server/main.cpp: Support for creating gdbsim targets.
	* targets/Makefile.am: Add support for building gdbsim target.
	* targets/Makefile.in: Regenerate.
	* targets/common/Makefile.in: Regenerate.