@@ -22,11 +22,14 @@
 
 #include "config.h"
 #include <cstdint>
+#include <cinttypes>
 
 #ifdef BUILD_64_BIT
 typedef uint64_t uint_reg_t;
+#define PRIuREG PRIu64
 #else
 typedef uint32_t uint_reg_t;
+#define PRIuREG PRIu32
 #endif
 
 #endif /* REGISTERSIZES_H */
